Rewritten profile forms with formik Added custom scrollbar Fixed columnWrapper overflow

--- a/src/components/home/columnWraper/columnWraper.module.css
+++ b/src/components/home/columnWraper/columnWraper.module.css
@@ -1,3 +1,5 @@
 .columnWrapper{
-
+    background-color: #0d1117;
+    display: flex;
 }
+
