--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,3 +17,11 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+::-webkit-scrollbar {
+  background-color: #272e3a;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3a4556;
+}
